Bug Fixes Backend